# SonaeLabelMaker

./: .gitignore  CMakeLists.txt  resources.qrc  run_chrome.bat  run_server.bat
csv/: 2410 Codification and tags for review V2.csv
deployed/web/: SonaeLabelMaker.js  index.html  vercel.json
res/: styles.qss
scripts/: deploy_web.bat
src/: colorpicker.qml  csv.h  csv_reader.cpp  csv_reader.h  fieldtoolbar.cpp  fieldtoolbar.h  fieldtoolbar.ui  file_uploader.cpp  file_uploader.h  instructions.cpp  instructions.h  instructions.ui  main.cpp  mainwindow.cpp  mainwindow.h  pageoptions.cpp  pageoptions.h  pageoptions.ui  pagepreview.cpp  pagepreview.h  pagepreview.ui  pdfbatchexport.cpp  pdfbatchexport.h  pdfbatchexport.ui  searchablelist.cpp  searchablelist.h  searchablelist.ui
static/: index.html
